⚙️ Attempts to fix chunk loading 5